# inventory-management-system

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  inventory.db  pyproject.toml  setup.py
.github/workflows/: ci.yml
inventory/: __attr__.py  __init__.py  app.py  db.py  inventory.db  inventory.sqlite  schema
inventory/templates/: base-template.html  base-template.jinja  index.html  index.jinja  location.html  location.jinja  modal.html  movement.html  movement.jinja  product.html  product.jinja
tests/: test_integrations.py
