[project]
name = "inventory"
authors = [
    { name = "Gavin D'souza", email = "gavin18d@gmail.com"}
]
description = "Basic Inventory Management System powered by Flask"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
dev = [
    "pytest",
    "beautifulsoup4",
]

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]